update snake and ladder game lld